--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,11 @@
 version: 2
 jobs:
   build:
+    branches:
+      only:
+        - master
+        - develop
+
     docker:
       # specify the version you desire here
       - image: circleci/openjdk:8-jdk
